@@ -1,22 +1,30 @@
 package utcapitole.miage.projetdevg3.service;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.*;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
-import utcapitole.miage.projetdevg3.model.*;
+import utcapitole.miage.projetdevg3.model.ConversationGrp;
+import utcapitole.miage.projetdevg3.model.ConversationPri;
+import utcapitole.miage.projetdevg3.model.Message;
+import utcapitole.miage.projetdevg3.model.Utilisateur;
+import utcapitole.miage.projetdevg3.repository.ConversationGrpRepository;
 import utcapitole.miage.projetdevg3.repository.ConversationPriRepository;
 import utcapitole.miage.projetdevg3.repository.MessageRepository;
-import utcapitole.miage.projetdevg3.service.ConversationService;
-
-import java.time.LocalDateTime;
 
 @ExtendWith(MockitoExtension.class)
 class ConversationServiceTest {
@@ -25,95 +33,170 @@ class ConversationServiceTest {
         private ConversationPriRepository conversationPriRepository;
 
         @Mock
+        private ConversationGrpRepository conversationGrpRepository;
+
+        @Mock
         private MessageRepository messageRepository;
 
         @InjectMocks
         private ConversationService conversationService;
 
-        private Utilisateur user;
+        private Utilisateur mockUser;
         private Utilisateur otherUser;
-        private ConversationPri conversation;
+        private ConversationPri mockPrivateConv;
+        private ConversationGrp mockGroupConv;
+        private Message mockMessage;
+        private static final Pageable TOP_FIVE = PageRequest.of(0, 5);
 
         @BeforeEach
         void setUp() {
-                user = new Utilisateur();
-                user.setId(1L);
-                user.setEmail("user@test.com");
+                mockUser = new Utilisateur();
+                mockUser.setId(1L);
+                mockUser.setEmail("user1@example.com");
 
                 otherUser = new Utilisateur();
                 otherUser.setId(2L);
-                otherUser.setEmail("other@test.com");
+                otherUser.setEmail("user2@example.com");
 
-                conversation = new ConversationPri();
-                conversation.setId(100L);
-                conversation.setExpediteurCP(user);
-                conversation.setDestinataireCP(otherUser);
+                mockPrivateConv = new ConversationPri();
+                mockPrivateConv.setId(1L);
+                mockPrivateConv.setExpediteurCP(mockUser);
+                mockPrivateConv.setDestinataireCP(otherUser);
+
+                mockGroupConv = new ConversationGrp();
+                mockGroupConv.setId(2L);
+
+                mockMessage = new Message();
+                mockMessage.setId(1L);
+                mockMessage.setContenu("Test message");
+                mockMessage.setExpedi(mockUser);
         }
 
         @Test
-        void getConversationsOfUser_shouldReturnList() {
-                List<ConversationPri> mockList = List.of(conversation);
-                when(conversationPriRepository.findByExpediteurCPOrDestinataireCP(user, user))
-                                .thenReturn(mockList);
+        void testGetConversationsWithRecentMessages() {
+                // Mock repository responses
+                when(conversationPriRepository.findByExpediteurCPOrDestinataireCP(mockUser, mockUser))
+                                .thenReturn(Arrays.asList(mockPrivateConv));
+                when(messageRepository.findByConversationOrderByDtEnvoiDesc(mockPrivateConv, TOP_FIVE))
+                                .thenReturn(Arrays.asList(mockMessage));
 
-                List<ConversationPri> result = conversationService.getConversationsOfUser(user);
+                // Test the service method
+                List<ConversationPri> result = conversationService.getConversationsWithRecentMessages(mockUser);
+
+                // Verify results
+                assertEquals(1, result.size());
+                assertEquals(1, result.get(0).getRecentMessages().size());
+                assertEquals("Test message", result.get(0).getRecentMessages().get(0).getContenu());
+
+                // Verify repository interactions
+                verify(conversationPriRepository).findByExpediteurCPOrDestinataireCP(mockUser, mockUser);
+                verify(messageRepository).findByConversationOrderByDtEnvoiDesc(mockPrivateConv, TOP_FIVE);
+        }
+
+        @Test
+        void testGetConversationsWithRecentMessages_EmptyList() {
+                when(conversationPriRepository.findByExpediteurCPOrDestinataireCP(mockUser, mockUser))
+                                .thenReturn(Collections.emptyList());
+
+                List<ConversationPri> result = conversationService.getConversationsWithRecentMessages(mockUser);
+
+                assertTrue(result.isEmpty());
+                verify(conversationPriRepository).findByExpediteurCPOrDestinataireCP(mockUser, mockUser);
+                verify(messageRepository, never()).findByConversationOrderByDtEnvoiDesc(any(), any());
+        }
+
+        @Test
+        void testGetGroupConversationsWithRecentMessages() {
+                when(conversationGrpRepository.findByUtilisateur(mockUser))
+                                .thenReturn(Arrays.asList(mockGroupConv));
+                when(messageRepository.findByConversationOrderByDtEnvoiDesc(mockGroupConv, TOP_FIVE))
+                                .thenReturn(Arrays.asList(mockMessage));
+
+                List<ConversationGrp> result = conversationService.getGroupConversationsWithRecentMessages(mockUser);
 
                 assertEquals(1, result.size());
-                assertEquals(conversation, result.get(0));
+                assertEquals(1, result.get(0).getRecentMessages().size());
+                verify(conversationGrpRepository).findByUtilisateur(mockUser);
+                verify(messageRepository).findByConversationOrderByDtEnvoiDesc(mockGroupConv, TOP_FIVE);
         }
 
         @Test
-        void getMessagesForConversation_shouldReturnMessages() {
-                Message message1 = new Message();
-                message1.setDtEnvoi(LocalDateTime.now());
+        void testGetGroupConversationsWithRecentMessages_EmptyList() {
+                when(conversationGrpRepository.findByUtilisateur(mockUser))
+                                .thenReturn(Collections.emptyList());
 
-                when(conversationPriRepository.findById(100L))
-                                .thenReturn(Optional.of(conversation));
-                when(messageRepository.findByConversationOrderByDtEnvoiAsc(conversation))
-                                .thenReturn(List.of(message1));
+                List<ConversationGrp> result = conversationService.getGroupConversationsWithRecentMessages(mockUser);
 
-                List<Message> messages = conversationService.getMessagesForConversation(100L, user);
-
-                assertEquals(1, messages.size());
+                assertTrue(result.isEmpty());
+                verify(conversationGrpRepository).findByUtilisateur(mockUser);
+                verify(messageRepository, never()).findByConversationOrderByDtEnvoiDesc(any(), any());
         }
 
         @Test
-        void getMessagesForConversation_notParticipant_shouldThrow() {
-                Utilisateur stranger = new Utilisateur();
-                stranger.setId(99L);
+        void testGetMessagesForConversation_Success() {
+                when(conversationPriRepository.findById(1L))
+                                .thenReturn(Optional.of(mockPrivateConv));
+                when(messageRepository.findByConversationOrderByDtEnvoiAsc(mockPrivateConv))
+                                .thenReturn(Arrays.asList(mockMessage));
 
-                when(conversationPriRepository.findById(100L))
-                                .thenReturn(Optional.of(conversation));
+                List<Message> result = conversationService.getMessagesForConversation(1L, mockUser);
 
-                assertThrows(IllegalStateException.class,
-                                () -> conversationService.getMessagesForConversation(100L, stranger));
+                assertEquals(1, result.size());
+                verify(conversationPriRepository).findById(1L);
+                verify(messageRepository).findByConversationOrderByDtEnvoiAsc(mockPrivateConv);
         }
 
         @Test
-        void getMessagesForConversation_notFound_shouldThrow() {
-                when(conversationPriRepository.findById(999L))
+        void testGetMessagesForConversation_NotFound() {
+                when(conversationPriRepository.findById(1L))
                                 .thenReturn(Optional.empty());
 
-                assertThrows(IllegalArgumentException.class,
-                                () -> conversationService.getMessagesForConversation(999L, user));
+                assertThrows(IllegalArgumentException.class, () -> {
+                        conversationService.getMessagesForConversation(1L, mockUser);
+                });
         }
 
         @Test
-        void getOtherUser_shouldReturnOtherParticipant() {
-                when(conversationPriRepository.findById(100L))
-                                .thenReturn(Optional.of(conversation));
+        void testGetMessagesForConversation_Unauthorized() {
+                Utilisateur unauthorizedUser = new Utilisateur();
+                unauthorizedUser.setId(3L);
 
-                Utilisateur result = conversationService.getOtherUser(100L, user);
+                when(conversationPriRepository.findById(1L))
+                                .thenReturn(Optional.of(mockPrivateConv));
 
-                assertEquals(otherUser, result);
+                assertThrows(IllegalStateException.class, () -> {
+                        conversationService.getMessagesForConversation(1L, unauthorizedUser);
+                });
         }
 
         @Test
-        void getOtherUser_notFound_shouldThrow() {
-                when(conversationPriRepository.findById(999L))
+        void testGetOtherUser_Success() {
+                when(conversationPriRepository.findById(1L))
+                                .thenReturn(Optional.of(mockPrivateConv));
+
+                Utilisateur result = conversationService.getOtherUser(1L, mockUser);
+
+                assertEquals(otherUser.getId(), result.getId());
+                verify(conversationPriRepository).findById(1L);
+        }
+
+        @Test
+        void testGetOtherUser_NotFound() {
+                when(conversationPriRepository.findById(1L))
                                 .thenReturn(Optional.empty());
 
-                assertThrows(IllegalArgumentException.class,
-                                () -> conversationService.getOtherUser(999L, user));
+                assertThrows(IllegalArgumentException.class, () -> {
+                        conversationService.getOtherUser(1L, mockUser);
+                });
+        }
+
+        @Test
+        void testGetOtherUser_AsRecipient() {
+                when(conversationPriRepository.findById(1L))
+                                .thenReturn(Optional.of(mockPrivateConv));
+
+                Utilisateur result = conversationService.getOtherUser(1L, otherUser);
+
+                assertEquals(mockUser.getId(), result.getId());
         }
 }
